# submitit-oar

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.circleci/: config.yml
submitit_oar/: __init__.py  conftest.py  oar.py  test_oar.py
